fix spacing on main page

--- a/html/styles.css
+++ b/html/styles.css
@@ -37,7 +37,7 @@
         }
 
         .mainpagediv {
-            max-width: 1500px;
+            max-width: 1000px;
             margin: 0 auto;
             padding: 20px;
             background-color: #2f2f2f;
